// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Flow Manipulation > actions > should replace router node with a single-action node 1`] = `
{
  "inboundConnections": {
    "node0_exit0": "node0",
  },
  "node": {
    "actions": [
      {
        "all_urns": false,
        "text": "Hey!",
        "type": "send_msg",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
    "exits": [
      {
        "destination_uuid": null,
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
    ],
    "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
  },
  "ui": {
    "position": {
      "bottom": 370,
      "left": 0,
      "right": 220,
      "top": 280,
    },
    "type": "execute_actions",
  },
}
`;

exports[`Flow Manipulation > init > should gracefully handle missing ui 1`] = `
{
  "nodes": {
    "node0": {
      "inboundConnections": {},
      "node": {
        "actions": [
          {
            "text": "Hi there, this is your first action!",
            "type": "send_msg",
            "uuid": "node0_action0",
          },
          {
            "groups": [
              {
                "name": "Flow Participants",
                "uuid": "group_0",
              },
            ],
            "type": "add_contact_groups",
            "uuid": "node0_action1",
          },
          {
            "groups": [
              {
                "name": "Nonresponsive",
                "uuid": "group_1",
              },
            ],
            "type": "remove_contact_groups",
            "uuid": "node0_action2",
          },
          {
            "labels": [
              {
                "name": "Help",
                "uuid": "label_0",
              },
              {
                "name": "Feedback",
                "uuid": "label_1",
              },
            ],
            "type": "add_input_labels",
            "uuid": "node0_action3",
          },
          {
            "name": "Started",
            "type": "set_run_result",
            "uuid": "node0_action4",
            "value": "true",
          },
        ],
        "exits": [
          {
            "destination_uuid": "node1",
            "name": null,
            "uuid": "node0_exit0",
          },
        ],
        "uuid": "node0",
      },
      "ui": {
        "position": {
          "left": 0,
          "top": 0,
        },
        "type": "execute_actions",
      },
    },
    "node1": {
      "inboundConnections": {
        "node0_exit0": "node0",
      },
      "node": {
        "actions": [],
        "exits": [
          {
            "destination_uuid": "node2",
            "uuid": "node1_exit0",
          },
          {
            "destination_uuid": "node2",
            "uuid": "node1_exit1",
          },
          {
            "destination_uuid": "node2",
            "uuid": "node1_exit2",
          },
        ],
        "router": {
          "cases": [
            {
              "arguments": [
                "red",
              ],
              "category_uuid": "node1_cat0",
              "type": "has_any_word",
              "uuid": "node1_case0",
            },
            {
              "arguments": [
                "green",
              ],
              "category_uuid": "node1_cat1",
              "type": "has_any_word",
              "uuid": "node1_case1",
            },
          ],
          "categories": [
            {
              "exit_uuid": "node1_exit0",
              "name": "Red",
              "uuid": "node1_cat0",
            },
            {
              "exit_uuid": "node1_exit1",
              "name": "Green",
              "uuid": "node1_cat1",
            },
            {
              "exit_uuid": "node1_exit2",
              "name": "Other",
              "uuid": "node1_cat2",
            },
          ],
          "default_exit_uuid": "node1_exit2",
          "operand": "@run.input",
          "result_name": "color",
          "type": "switch",
          "wait": {
            "type": "msg",
          },
        },
        "uuid": "node1",
      },
      "ui": {
        "position": {
          "left": 0,
          "top": 150,
        },
        "type": "wait_for_response",
      },
    },
    "node2": {
      "inboundConnections": {
        "node1_exit0": "node1",
        "node1_exit1": "node1",
        "node1_exit2": "node1",
      },
      "node": {
        "actions": [
          {
            "text": "This has been really great.",
            "type": "send_msg",
            "uuid": "node2_action0",
          },
          {
            "field": {
              "key": "unknown_field",
              "name": "Unknown Field",
            },
            "type": "set_contact_field",
            "uuid": "node2_action1",
            "value": "Some Value",
          },
        ],
        "exits": [
          {
            "destination_uuid": "node3",
            "name": null,
            "uuid": "node2_exit0",
          },
        ],
        "uuid": "node2",
      },
      "ui": {
        "position": {
          "left": 0,
          "top": 300,
        },
        "type": "execute_actions",
      },
    },
    "node3": {
      "inboundConnections": {
        "node2_exit0": "node2",
      },
      "node": {
        "actions": [
          {
            "text": "Thanks for playing!",
            "type": "send_msg",
            "uuid": "node3_action0",
          },
        ],
        "exits": [
          {
            "destination_uuid": null,
            "name": null,
            "uuid": "node3_exit0",
          },
        ],
        "uuid": "node3",
      },
      "ui": {
        "position": {
          "left": 0,
          "top": 450,
        },
        "type": "execute_actions",
      },
    },
  },
}
`;

exports[`Flow Manipulation > node editor > normal editing > should edit router nodes 1`] = `
[
  {
    "payload": {
      "typeConfig": {
        "aliases": [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": [
          "categories",
          "cases",
        ],
        "name": "Wait for response",
        "type": "wait_for_response",
        "visibility": [
          "messaging",
          "messaging_offline",
        ],
      },
    },
    "type": "UPDATE_TYPE_CONFIG",
  },
  {
    "payload": {
      "settings": {
        "localizations": [],
        "originalNode": {
          "inboundConnections": {
            "node0_exit0": "node0",
          },
          "node": {
            "actions": [],
            "exits": [
              {
                "destination_uuid": "node2",
                "uuid": "node1_exit0",
              },
              {
                "destination_uuid": "node2",
                "uuid": "node1_exit1",
              },
              {
                "destination_uuid": "node2",
                "uuid": "node1_exit2",
              },
            ],
            "router": {
              "cases": [
                {
                  "arguments": [
                    "red",
                  ],
                  "category_uuid": "node1_cat0",
                  "type": "has_any_word",
                  "uuid": "node1_case0",
                },
                {
                  "arguments": [
                    "green",
                  ],
                  "category_uuid": "node1_cat1",
                  "type": "has_any_word",
                  "uuid": "node1_case1",
                },
              ],
              "categories": [
                {
                  "exit_uuid": "node1_exit0",
                  "name": "Red",
                  "uuid": "node1_cat0",
                },
                {
                  "exit_uuid": "node1_exit1",
                  "name": "Green",
                  "uuid": "node1_cat1",
                },
                {
                  "exit_uuid": "node1_exit2",
                  "name": "Other",
                  "uuid": "node1_cat2",
                },
              ],
              "default_exit_uuid": "node1_exit2",
              "operand": "@run.input",
              "result_name": "color",
              "type": "switch",
              "wait": {
                "type": "msg",
              },
            },
            "uuid": "node1",
          },
          "ui": {
            "position": {
              "bottom": 370,
              "left": 0,
              "right": 220,
              "top": 280,
            },
            "type": "wait_for_response",
          },
        },
        "showAdvanced": false,
      },
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
  {
    "payload": {
      "editorState": {
        "activity": {
          "nodes": {},
          "segments": {},
        },
        "activityInterval": 5000,
        "currentGuide": null,
        "currentRevision": null,
        "debug": null,
        "dragActive": false,
        "dragDownPosition": null,
        "dragGroup": false,
        "dragNodeUUID": null,
        "dragSelection": null,
        "dragStartTime": 0,
        "fetchingFlow": false,
        "ghostNode": null,
        "guidingStep": -1,
        "language": null,
        "liveActivity": {
          "nodes": {},
          "segments": {},
        },
        "mouseState": "select",
        "popped": null,
        "scrollToAction": null,
        "scrollToNode": null,
        "selectionActive": false,
        "simulating": false,
        "translating": false,
        "visible": true,
        "warnings": {},
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
]
`;

exports[`Flow Manipulation > node editor > opening and closing > should only update things that are set 1`] = `
[
  {
    "payload": {
      "editorState": {
        "activity": {
          "nodes": {},
          "segments": {},
        },
        "activityInterval": 5000,
        "currentGuide": null,
        "currentRevision": null,
        "debug": null,
        "dragActive": false,
        "dragDownPosition": null,
        "dragGroup": false,
        "dragNodeUUID": null,
        "dragSelection": null,
        "dragStartTime": 0,
        "fetchingFlow": false,
        "ghostNode": null,
        "guidingStep": -1,
        "language": null,
        "liveActivity": {
          "nodes": {},
          "segments": {},
        },
        "mouseState": "select",
        "popped": null,
        "scrollToAction": null,
        "scrollToNode": null,
        "selectionActive": false,
        "simulating": false,
        "translating": false,
        "visible": true,
        "warnings": {},
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  {
    "payload": {
      "settings": null,
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
]
`;

exports[`Flow Manipulation > node editor > opening and closing > should reset the node editor 1`] = `
[
  {
    "payload": {
      "editorState": {
        "ghostNode": null,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  {
    "payload": {
      "settings": null,
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
]
`;

exports[`Flow Manipulation > nodes > removal > should remove node node0 > Remove node0 1`] = `
{
  "node1": {
    "inboundConnections": {},
    "node": {
      "actions": [],
      "exits": [
        {
          "destination_uuid": "node2",
          "uuid": "node1_exit0",
        },
        {
          "destination_uuid": "node2",
          "uuid": "node1_exit1",
        },
        {
          "destination_uuid": "node2",
          "uuid": "node1_exit2",
        },
      ],
      "router": {
        "cases": [
          {
            "arguments": [
              "red",
            ],
            "category_uuid": "node1_cat0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          {
            "arguments": [
              "green",
            ],
            "category_uuid": "node1_cat1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "categories": [
          {
            "exit_uuid": "node1_exit0",
            "name": "Red",
            "uuid": "node1_cat0",
          },
          {
            "exit_uuid": "node1_exit1",
            "name": "Green",
            "uuid": "node1_cat1",
          },
          {
            "exit_uuid": "node1_exit2",
            "name": "Other",
            "uuid": "node1_cat2",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
        "wait": {
          "type": "msg",
        },
      },
      "uuid": "node1",
    },
    "ui": {
      "position": {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": {
    "inboundConnections": {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": {
      "actions": [
        {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        {
          "field": {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": [
        {
          "destination_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": {
      "position": {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": {
    "inboundConnections": {
      "node2_exit0": "node2",
    },
    "node": {
      "actions": [
        {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": [
        {
          "destination_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": {
      "position": {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation > nodes > removal > should remove node node1 > Remove node1 1`] = `
{
  "node0": {
    "inboundConnections": {},
    "node": {
      "actions": [
        {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        {
          "groups": [
            {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        {
          "groups": [
            {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        {
          "labels": [
            {
              "name": "Help",
              "uuid": "label_0",
            },
            {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
        {
          "name": "Started",
          "type": "set_run_result",
          "uuid": "node0_action4",
          "value": "true",
        },
      ],
      "exits": [
        {
          "destination_uuid": null,
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": {
      "position": {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node2": {
    "inboundConnections": {},
    "node": {
      "actions": [
        {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        {
          "field": {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": [
        {
          "destination_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": {
      "position": {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": {
    "inboundConnections": {
      "node2_exit0": "node2",
    },
    "node": {
      "actions": [
        {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": [
        {
          "destination_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": {
      "position": {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation > nodes > removal > should remove node node2 > Remove node2 1`] = `
{
  "node0": {
    "inboundConnections": {},
    "node": {
      "actions": [
        {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        {
          "groups": [
            {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        {
          "groups": [
            {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        {
          "labels": [
            {
              "name": "Help",
              "uuid": "label_0",
            },
            {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
        {
          "name": "Started",
          "type": "set_run_result",
          "uuid": "node0_action4",
          "value": "true",
        },
      ],
      "exits": [
        {
          "destination_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": {
      "position": {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": {
    "inboundConnections": {
      "node0_exit0": "node0",
    },
    "node": {
      "actions": [],
      "exits": [
        {
          "destination_uuid": "node3",
          "uuid": "node1_exit0",
        },
        {
          "destination_uuid": "node3",
          "uuid": "node1_exit1",
        },
        {
          "destination_uuid": "node3",
          "uuid": "node1_exit2",
        },
      ],
      "router": {
        "cases": [
          {
            "arguments": [
              "red",
            ],
            "category_uuid": "node1_cat0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          {
            "arguments": [
              "green",
            ],
            "category_uuid": "node1_cat1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "categories": [
          {
            "exit_uuid": "node1_exit0",
            "name": "Red",
            "uuid": "node1_cat0",
          },
          {
            "exit_uuid": "node1_exit1",
            "name": "Green",
            "uuid": "node1_cat1",
          },
          {
            "exit_uuid": "node1_exit2",
            "name": "Other",
            "uuid": "node1_cat2",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
        "wait": {
          "type": "msg",
        },
      },
      "uuid": "node1",
    },
    "ui": {
      "position": {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node3": {
    "inboundConnections": {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": {
      "actions": [
        {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": [
        {
          "destination_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": {
      "position": {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation > nodes > removal > should remove node node3 > Remove node3 1`] = `
{
  "node0": {
    "inboundConnections": {},
    "node": {
      "actions": [
        {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        {
          "groups": [
            {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        {
          "groups": [
            {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        {
          "labels": [
            {
              "name": "Help",
              "uuid": "label_0",
            },
            {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
        {
          "name": "Started",
          "type": "set_run_result",
          "uuid": "node0_action4",
          "value": "true",
        },
      ],
      "exits": [
        {
          "destination_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": {
      "position": {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": {
    "inboundConnections": {
      "node0_exit0": "node0",
    },
    "node": {
      "actions": [],
      "exits": [
        {
          "destination_uuid": "node2",
          "uuid": "node1_exit0",
        },
        {
          "destination_uuid": "node2",
          "uuid": "node1_exit1",
        },
        {
          "destination_uuid": "node2",
          "uuid": "node1_exit2",
        },
      ],
      "router": {
        "cases": [
          {
            "arguments": [
              "red",
            ],
            "category_uuid": "node1_cat0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          {
            "arguments": [
              "green",
            ],
            "category_uuid": "node1_cat1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "categories": [
          {
            "exit_uuid": "node1_exit0",
            "name": "Red",
            "uuid": "node1_cat0",
          },
          {
            "exit_uuid": "node1_exit1",
            "name": "Green",
            "uuid": "node1_cat1",
          },
          {
            "exit_uuid": "node1_exit2",
            "name": "Other",
            "uuid": "node1_cat2",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
        "wait": {
          "type": "msg",
        },
      },
      "uuid": "node1",
    },
    "ui": {
      "position": {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": {
    "inboundConnections": {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": {
      "actions": [
        {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        {
          "field": {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": [
        {
          "destination_uuid": null,
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": {
      "position": {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
}
`;

exports[`Flow Manipulation > nodes > should store a pending connection when starting a drag 1`] = `
[
  {
    "payload": {
      "editorState": {
        "activity": {
          "nodes": {},
          "segments": {},
        },
        "activityInterval": 5000,
        "currentGuide": null,
        "currentRevision": null,
        "debug": null,
        "dragActive": false,
        "dragDownPosition": null,
        "dragGroup": false,
        "dragNodeUUID": null,
        "dragSelection": null,
        "dragStartTime": 0,
        "fetchingFlow": false,
        "ghostNode": {
          "ghost": true,
          "inboundConnections": {
            "node0_exit0": "node0",
          },
          "node": {
            "actions": [],
            "exits": [
              {
                "destination_uuid": null,
                "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
              },
            ],
            "router": {
              "cases": [],
              "categories": [
                {
                  "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                  "name": "All Responses",
                  "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                },
              ],
              "default_category_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              "result_name": "Result 1",
              "type": "switch",
              "wait": {
                "type": "msg",
              },
            },
            "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          },
          "ui": {
            "position": {
              "left": 0,
              "top": 0,
            },
            "type": "wait_for_response",
          },
        },
        "guidingStep": -1,
        "language": null,
        "liveActivity": {
          "nodes": {},
          "segments": {},
        },
        "mouseState": "select",
        "popped": null,
        "scrollToAction": null,
        "scrollToNode": null,
        "selectionActive": false,
        "simulating": false,
        "translating": false,
        "visible": true,
        "warnings": {},
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
]
`;

exports[`Flow Manipulation > routers > should add random routers after an add action 1`] = `
{
  "inboundConnections": {},
  "node": {
    "actions": [],
    "exits": [
      {
        "destination_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        "name": null,
        "uuid": "node0_exit0",
      },
    ],
    "uuid": "node0",
  },
  "ui": {
    "position": {
      "bottom": 254,
      "left": 0,
      "right": 220,
      "top": 10,
    },
  },
}
`;

exports[`Flow Manipulation > routers > should add random routers after an add action 2`] = `
{
  "inboundConnections": {
    "node0_exit0": "node0",
  },
  "node": {
    "actions": [],
    "exits": [
      {
        "destination_uuid": null,
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
      {
        "destination_uuid": null,
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
    ],
    "router": {
      "categories": [
        {
          "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          "name": "Bucket 1",
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
        {
          "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "name": "Bucket 2",
          "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        },
      ],
      "type": "random",
    },
    "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
  },
  "ui": {
    "position": {
      "bottom": 254,
      "left": 0,
      "right": 220,
      "top": 10,
    },
    "type": "split_by_random",
  },
}
`;
